move ./out/index.html -> ./index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <body style="margin: 0px; width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
   <script type="module">
-    import init from './flappy-ball.js'
+    import init from './out/flappy-ball.js'
 
     init().catch((error) => {
       if (!error.message.startsWith("Using exceptions for control flow, don't mind me. This isn't actually an error!")) {
