finish the short project

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-<body style="margin: 0px; width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center;">
+<body style="margin: 0px; width: 100vw; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+  <h1> Implementation of the genetic algorithm in Flappy "Ball" (done within a few hours) </h1>
   <script type="module">
     import init from './out/flappy-ball.js'
 
